--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-katex": "^3.0.4",
+    "better-react-mathjax": "^2.0.3",
+    "mathjax": "^3.2.2",
+    "mathlive": "^0.100.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.5"
+    "react-hook-form": "^7.51.5",
+    "react-katex": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
